package gameLaby.laby;

public interface Attaque {

   void infligerDegats(Vivant v);

}
